# LOBE

./: README.md  requirements.txt
data/rq3/: ablation.txt  maxStep.txt
options/: mlir_conversion.json  mlir_generalopt.json  mlir_specificopt.json  op_priority_equal.json
tosa_code/: BaseLoweringStrategy.py  ConversionPassLowering.py  FullResetLowering.py  RandomPassLowering.py  RatteSemantics.py  RatteSemantics4cov.py  StatefulLowering.py  build_conversion_graph.py  build_conversions.py  lowering.py  lowering_enumerate.py  main_ratte.py  main_tosa.py  ratteseed.py  ratteseed4semantics.py  tosaseed.py  util.py
tosa_code/experiment/: analysis_crash_both.py  bug_ven.py  collect_op_ratte.sh  collect_op_tosa.sh  crash_bug_calculate.py  dialect_op_calculate.py  dialect_op_ven.py  inconsistent.md  inconsistent_bug_calculate.py  merge.py  result_calculate.py  result_calculate_limitedstep.py  step_calculate.py  test_ven.py
tosa_code/parser/: build.py  parse_conversion.py
tosa_code/scripts/: analysis_collect_files.py  analysis_compare_otherresults.py  analysis_other_results.py  analysis_ratte.py  analysis_ratte_log.py  script.py  (+6 more)
tosasmith/llvm-project/mlir/tools/mlir-deduplicate/: CMakeLists.txt  mlir-deduplicate.cpp
tosasmith/llvm-project/mlir/tools/mlir-scan/: CMakeLists.txt  mlir-scan.cpp
tosasmith/llvm-project/mlir/tools/tosa-smith/: CMakeLists.txt  tosa-smith.cpp
tosasmith/llvm-project/mlir/tools/tosa-smith/include/: Context.h  Function.h  Module.h  Operation.h  TOSASmith.h  Type.h  Utils.h
tosasmith/llvm-project/mlir/tools/tosa-smith/lib/: TOSASmith.cpp
(+2127 files in other folders)
